# wisemonkey

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  index.html  install.sh  justfile  pyproject.toml
agent/: __init__.py  __main__.py  agent.py  commands.py  config.py  console.py  core.py  history.py  mcp.py  memory.py  output.py  prompt_ui.py  router.py  skills.py  startup.py  tools.py  tui.py  update.py  utils.py  vectorstore.py
layout/: layout.tcss
skills/code-review/: SKILL.md
skills/create-plan/: SKILL.md
skills/readme-gen/: SKILL.md
styles/: wm.tcss
tests/: conftest.py  test_config.py  test_core.py  test_memory.py  test_skills.py  test_tools.py
tools/: basic.py  files.py  memory.py  network.py  screenshot.py  terminal.py  vectorstore.py
