[project]
name = "wisemonkey"
version = "2026.06.16"
description = "A simple, extensible, and hackable AI agent for the Linux and macOS terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.70.0",
    "ollama>=0.4.0",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
    "xdg-base-dirs>=6.0.2",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "pypubsub>=4.0.7",
]

[project.scripts]
wisemonkey = "agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools"]
